arrange little bit style

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,7 +16,9 @@
 .service{
     h1{text-align: center;}
     ul{
-        padding-top: 30px;        
+        padding-top: 30px;
+        width: 300px;
+        margin: 0 auto; 
     }
     // p{
     //     padding-top: 30px;
